test/kubernetes/e2e/features/listenerset/testdata/invalid-listenerset-non-existing-gw.yaml
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: invalid-ls-non-existing-gw
spec:
  parentRef:
    name: non-existing
    kind: Gateway
    group: gateway.networking.k8s.io
  listeners:
  - name: http
    protocol: HTTP
    port: 8081
