test/kubernetes/e2e/features/listenerset/testdata/invalid-listenerset-not-allowed.yaml
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: invalid-ls-not-allowed
  namespace: curl
spec:
  parentRef:
    name: gw
    namespace: default
    kind: Gateway
    group: gateway.networking.k8s.io
  listeners:
  - name: http
    protocol: HTTP
    port: 8081
