test/kubernetes/e2e/features/listenerset/testdata/valid-listenerset-2.yaml
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: valid-ls-2
  namespace: allowed-ns
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gw
    namespace: default
  listeners:
  - name: http
    protocol: HTTP
    port: 8095
    allowedRoutes:
        namespaces:
          from: All
