test/kubernetes/e2e/features/listenerset/testdata/valid-listenerset-3.yaml
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: valid-ls-3
  namespace: allowed-ns
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gw
    namespace: default
  listeners:
  - name: http
    protocol: HTTP
    port: 8090
    allowedRoutes:
        namespaces:
          from: All
  - name: http-2
    protocol: HTTP
    port: 8091
    allowedRoutes:
        namespaces:
          from: All
